# tgn_stock

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data_fetching.ipynb
notebooks/tgn_model/: train.ipynb  utils.py
tgn_stock/: __init__.py  config.py  dataset.py  features.py  network.py  plots.py
tgn_stock/config/: config.py  data_config.yaml  graph_build_config.yaml
tgn_stock/data/: __init__.py  data_fetching.py  prepare_data.py
tgn_stock/graph/: __init__.py  create_network.py  network.py
tgn_stock/modeling/: predict.py  train.py
